objects/VLE_Action__c.object
<CustomObject><fields>
        <fullName>Action__c</fullName>
        <description>Type of action to VLE API</description>
        <label>Action</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Next_Try__c</fullName>
        <description>Time when delayed action should try sync again</description>
        <label>Next Try</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Note__c</fullName>
        <description>Some notes about this action. Show error message if error occurs in the perform() method.</description>
        <label>Note</label>
        <length>64</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <description>Status value means: New - for future, Delayed - wait for became Batch, Canceled - not actual in some reasons</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Batch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Object for perform complex action to VLE API</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>VLE Action</label><nameField>
        <label>VLE Action Name</label>
        <type>Text</type>
    </nameField><pluralLabel>VLE Actions</pluralLabel><sharingModel>Private</sharingModel><listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>